--- a/style.css
+++ b/style.css
@@ -11,8 +11,7 @@ html {
 	left: 0;
 	right: 0;
 	bottom: 0;
-	background: #121212;
-	background-color: #121212;
+	background-color: rgba(0,255,0);
 	overflow: hidden;
 }
 figure {
