--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ figure span {
 	width: 100%;
 	height: 100%;
 	transform: rotateX(var(--x-angle)) rotateY(var(--y-angle)) rotateZ(var(--z-angle));
+	transition: transform 100ms linear;
 }
 figure span img {
 	width: 100%;
@@ -50,16 +51,14 @@ figure span:before {
 	background-color: #fff;
 	border-color: #49294b;
 	border-style: solid;
-	will-change: width, height;
 	box-sizing: border-box;
 	z-index: 2;
 }
 figure:not(.speaking) {
-	transition: opacity 500ms ease-in-out, transform 100ms ease-in-out;
-	will-change: transform;
+	transition: opacity 500ms ease-in-out;
 }
 figure:not(.speaking) span:before {
-	transition: all 50ms;
+	transition: all 100ms;
 }
 figure:not(.a):not(.e):not(.i):not(.o):not(.u) span:before {
 	top: var(--mouth-top);
